crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_tpch_simple_q6_explain_sf10.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q6"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                           |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                                                                                                                                                               |
|               |   Projection: orders.o_orderkey + Int64(1) AS key                                                                                                                                                              |
|               |     Limit: skip=0, fetch=10                                                                                                                                                                                    |
|               |       TableScan: orders projection=[o_orderkey], fetch=10                                                                                                                                                      |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 + 1 as key]                                                                                                                                                                 |
|               |   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                        |
|               |     GlobalLimitExec: skip=0, fetch=10                                                                                                                                                                          |
|               |       SchemaCastScanExec                                                                                                                                                                                       |
|               |         CayenneAccelerationExec                                                                                                                                                                                |
|               |           BytesProcessedExec                                                                                                                                                                                   |
|               |             DataSourceExec: file_groups={1 group: [[/data/orders/<CAYENNE_PATH>.vortex]]}, projection=[o_orderkey], limit=10, file_type=vortex |
|               |                                                                                                                                                                                                                |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
