crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_tpch_simple_q6_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q6"
---
+---------------+------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                   |
+---------------+------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                                                                       |
|               |   Projection: orders.o_orderkey + Int64(1) AS key                                                                      |
|               |     Limit: skip=0, fetch=10                                                                                            |
|               |       TableScan: orders projection=[o_orderkey], fetch=10                                                              |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 + 1 as key]                                                                         |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                |
|               |     SchemaCastScanExec                                                                                                 |
|               |       CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                |
|               |         CoalescePartitionsExec: fetch=10                                                                               |
|               |           BytesProcessedExec                                                                                           |
|               |             DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[o_orderkey], limit=10, file_type=vortex |
|               |                                                                                                                        |
+---------------+------------------------------------------------------------------------------------------------------------------------+
